@@ -2,15 +2,10 @@ import com.github.kjetilv.flopp.bld.Native
 import com.github.kjetilv.flopp.bld.Native.runCommand
 import java.nio.file.Path
 
-plugins {
-    java
-    `maven-publish`
-}
-
 dependencies {
     implementation(project(":flopp-kernel"))
 
-    testRuntimeOnly("ch.qos.logback:logback-classic:1.4.12")
+    testRuntimeOnly("ch.qos.logback:logback-classic:1.5.2")
     testImplementation(platform("org.junit:junit-bom:5.10.2"))
     testImplementation("org.junit.jupiter:junit-jupiter:5.10.2")
     testImplementation("org.assertj:assertj-core:3.25.3")
@@ -21,26 +16,6 @@ java {
         languageVersion.set(JavaLanguageVersion.of(21))
         vendor.set(JvmVendorSpec.GRAAL_VM)
     }
-    withSourcesJar()
-    sourceCompatibility = JavaVersion.VERSION_21
-    targetCompatibility = JavaVersion.VERSION_21
-}
-
-tasks {
-    withType<JavaCompile> {
-        options.compilerArgs.add("--enable-preview")
-    }
-    withType<Test>() {
-        jvmArgs("--enable-preview")
-        useJUnitPlatform()
-    }
-    withType<JavaExec>() {
-        jvmArgs("--enable-preview")
-    }
-}
-
-tasks.test {
-    useJUnitPlatform()
 }
 
 tasks.register<Task>("native-image")
@@ -56,7 +31,7 @@ tasks.register<Task>("native-image")
                 ).map(
                     Path::toString
                 ),
-                "com.github.kjetilv.flopp.lc.Lcc",
+                "com.github.kjetilv.flopp.lc.Lc",
                 "lc",
                 javaToolchains
             )
